--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "api_secret": "example_api_secret",
   "storage": {
     "type": "postgresql",
-    "host": "postgres",
+    "host": "localhost",
     "port": 5432,
     "username": "postgres",
     "password": "postgres",
